--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,29 +1,33 @@
-name: Test
+name: Release
 
 on:
   push:
-  pull_request:
+    branches:
+      - main
+      - next
+      - next-major
+      - rc
+      - alpha
+      - beta
+
+env:
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version:
-          - 14
-          - 16
-          - 18
 
     steps:
       - name: Checkout Git repository
         uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Configure NodeJS version
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 18
           cache: "npm"
       - name: Audit modules
         run: npm audit --audit-level=critical
       - name: Install dependencies
         run: npm ci
+      - name: Trigger a new release
+        run: ./node_modules/.bin/semantic-release
