--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "semantic-release": "^19.0.5"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "lib.js"
   ],
   "release": {
     "branches": [
